k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-a
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      version: vA
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: nginx
        version: vA
    spec:
      containers:
      - name: nginx
        image: nginx:mainline
        ports:
        - containerPort: 80
        volumeMounts:
          - name: nginx-index-html-file
            mountPath: /usr/share/nginx/html/
      volumes:
      - name: nginx-index-html-file
        configMap:
          name: nginx-configmap-index-html-version-a

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-b
  labels:
    app: nginx
    version: vB
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      version: vB
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: nginx
        version: vB
    spec:
      containers:
      - name: nginx
        image: nginx:mainline
        ports:
        - containerPort: 80
        volumeMounts:
          - name: nginx-index-html-file
            mountPath: /usr/share/nginx/html/
      volumes:
      - name: nginx-index-html-file
        configMap:
          name: nginx-configmap-index-html-version-b
