k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
  - port: 8085
    targetPort: 80
    nodePort: 30000
