k8s/ingress_gateway.yaml
## CONFIG MAPS
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-a
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      version: versionA
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: nginx
        version: versionA
    spec:
      containers:
      - name: nginx
        image: nginx:mainline
        ports:
        - containerPort: 80
        volumeMounts:
          - name: nginx-index-html-file
            mountPath: /usr/share/nginx/html/
      volumes:
      - name: nginx-index-html-file
        configMap:
          name: nginx-configmap-index-html-version-a

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-b
  labels:
    app: nginx
    version: versionB
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      version: versionB
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: nginx
        version: versionB
    spec:
      containers:
      - name: nginx
        image: nginx:mainline
        ports:
        - containerPort: 80
        volumeMounts:
          - name: nginx-index-html-file
            mountPath: /usr/share/nginx/html/
      volumes:
      - name: nginx-index-html-file
        configMap:
          name: nginx-configmap-index-html-version-b

## SERVICES
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
  - port: 8085
    targetPort: 80

# ISTIO CONFIGS
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ingress-gateway-k3s
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: http2
      hosts:
      - "*"

---
kind: DestinationRule
apiVersion: networking.istio.io/v1beta1
metadata:
  namespace: default
  name: nginx-service
  labels:
    kiali_wizard: traffic_shifting
  annotations: ~
spec:
  host: nginx-service.default.svc.cluster.local
  subsets:
    - name: versionA
      labels:
        version: versionA
    - name: versionB
      labels:
        version: versionB

---
kind: VirtualService
apiVersion: networking.istio.io/v1beta1
metadata:
  namespace: default
  name: nginx-service
  labels:
    kiali_wizard: traffic_shifting
spec:
  hosts:
    - "*"
  gateways:
    - ingress-gateway-k3s
  http:
    - match:
      - uri:
          prefix: "/only-b"
      route:
        - destination:
            host: nginx-service.default.svc.cluster.local
            subset: versionB

    - match:
      - uri:
          prefix: "/only-a"
      route:
        - destination:
            host: nginx-service.default.svc.cluster.local
            subset: versionA

    - match:
      - uri:
          prefix: "/half-a-half-b"
      route:
        - destination:
            host: nginx-service.default.svc.cluster.local
            subset: versionA
          weight: 50
        - destination:
            host: nginx-service.default.svc.cluster.local
            subset: versionB
          weight: 50

    - match:
      - uri:
          prefix: "/"
      route:
        - destination:
            host: nginx-service.default.svc.cluster.local
            subset: versionA
          weight: 95
        - destination:
            host: nginx-service.default.svc.cluster.local
            subset: versionB
          weight: 5
