k8s/sticky_sessions_with_consistent_hash.yaml
## CONFIG MAPS
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-a
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      version: versionA
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: nginx
        version: versionA
    spec:
      containers:
      - name: nginx
        image: nginx:mainline
        ports:
        - containerPort: 80
        volumeMounts:
          - name: nginx-index-html-file
            mountPath: /usr/share/nginx/html/
      volumes:
      - name: nginx-index-html-file
        configMap:
          name: nginx-configmap-index-html-version-a

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-b
  labels:
    app: nginx
    version: versionB
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      version: versionB
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: nginx
        version: versionB
    spec:
      containers:
      - name: nginx
        image: nginx:mainline
        ports:
        - containerPort: 80
        volumeMounts:
          - name: nginx-index-html-file
            mountPath: /usr/share/nginx/html/
      volumes:
      - name: nginx-index-html-file
        configMap:
          name: nginx-configmap-index-html-version-b

## SERVICES
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
  - port: 8085
    targetPort: 80
    nodePort: 30000

## ISTIO CONFIGS
---
kind: DestinationRule
apiVersion: networking.istio.io/v1beta1
metadata:
  namespace: default
  name: nginx-service
  labels:
    kiali_wizard: traffic_shifting
  annotations: ~
spec:
  host: nginx-service.default.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      consistentHash: # Possible values: https://istio.io/latest/docs/reference/config/networking/destination-rule/#LoadBalancerSettings-ConsistentHashLB
        httpHeaderName: "x-my-header"
  subsets:
    - name: versionAll
      labels:
        app: nginx # this got both versionA and versionB pods

---
kind: VirtualService
apiVersion: networking.istio.io/v1beta1
metadata:
  namespace: default
  name: nginx-service
  labels:
    kiali_wizard: traffic_shifting
spec:
  http:
    - route:
        - destination:
            host: nginx-service.default.svc.cluster.local
            subset: versionAll
  hosts:
    - nginx-service.default.svc.cluster.local
  gateways: ~
